Add main page link

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     }
 </style>
 <body>
+    <header>
+        <a href="https://axelj.dev">AxelJ Home</a>
+    </header>
+    <main>
     <h1>Posts</h1>
-    <ul>
-        <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a> | 2024 February 18</li>
-    </ul>
+        <ul>
+            <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a> | 2024 February 18</li>
+        </ul>
+    </main>
 </body>
 </html>
