--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
     body {
         font-family: sans-serif, monospace, serif;
-        padding: 0% 20% 0% 20%;
+        padding: 5%;
     }
 </style>
 <body>
@@ -18,7 +18,7 @@
     <main>
     <h1>Posts</h1>
         <ul>
-            <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a> | 2024 February 18</li>
+            <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a></li>
         </ul>
     </main>
 </body>
