Increase root font size

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Web log</title>
 </head>
 <style>
+    :root {
+        font-size: 20px;
+    }
     body {
         font-family: sans-serif, monospace, serif;
         padding: 5%;
