--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web log</title>
-</head>
-<style>
+  </head>
+  <style>
     :root {
-        font-size: 20px;
+      font-size: 20px;
     }
+
     body {
-        font-family: sans-serif, monospace, serif;
-        padding: 5%;
+      font-family: sans-serif, monospace, serif;
+      display: inline-block;
+      padding: 5%;
     }
-</style>
-<body>
+  </style>
+  <body>
     <header>
-        <a href="https://axelj.dev">AxelJ Home</a>
+      <a href="https://axelj.dev">AxelJ Home</a>
     </header>
     <main>
-    <h1>Posts</h1>
-        <ul>
-            <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a></li>
-        </ul>
+      <h1>Posts</h1>
+      <ul>
+        <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a></li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
