--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web log</title>
-  </head>
-  <style>
-    :root {
-      font-size: 20px;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Web log</title>
+</head>
+<style>
+  :root {
+    font-size: 20px;
+  }
+
+  body {
+    display: flex;
+    justify-content: center;
+  }
+
+  main {
+    font-family: sans-serif, monospace, serif;
+    display: inline-block;
+    padding: 5%;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    a {
+      color: #4b96ff;
     }
 
     body {
-      font-family: sans-serif, monospace, serif;
-      display: inline-block;
-      padding: 5%;
+      background: black;
+      color: white;
     }
-  </style>
-  <body>
+  }
+</style>
+
+<body>
+  <main>
     <header>
       <a href="https://axelj.dev">AxelJ Home</a>
     </header>
-    <main>
+    <div id="post-list">
       <h1>Posts</h1>
       <ul>
         <li><a href="/posts/brutalist-true-minimalism.html">Brutalist true-minimalism</a></li>
       </ul>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
